# assistant

./: .gitignore  manage.py  pyproject.toml
assistant/: settings.py  urls.py
