[tool.poetry]
name = "django"
version = "0.1.0"
description = "My virtual assistant"
authors = ["Michał Chełmiński <michalchelminski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
